<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjecteM07FerraniAdrian</string>
    <string name="titol">Inicia Sessió</string>
    <string name="etUsernamehint">Email</string>
    <string name="etPasswordhint">Contrassenya</string>
    <string name="btnLogintext">Accedir</string>
    <string name="btnRegistertext">Registrar</string>
    <string name="tvUsernametext">Usuari</string>
    <string name="tvPasswordtext">Contrassenya</string>
    <string name="title_activity_register2">Register2</string>
    <string name="txtUser">Usuari:</string>
    <string name="tvContrasena">Contrassenya</string>
    <string name="etPass">Contrassenya</string>
    <string name="tvNombre">Nom</string>
    <string name="tvApellidos">Cognom</string>
    <string name="etNombre">Nom</string>
    <string name="etApellido">Cognom</string>
    <string name="btnRegistrarse">Registrar-se</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inici</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_perfilusuari">Perfil d\'usuari</string>
    <string name="menu_send">Send</string>
    <string name="tvUsername" translatable="false" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Albums">Albums</string>
    <string name="Categories">Categories</string>
    <string name="Inici">Inici</string>
    <string name="darksideofthemoon" translatable="false">Dark Side Of The Moon</string>
    <string name="encore" translatable="false">Encore</string>
    <string name="bad" translatable="false">Bad</string>
    <string name="elmalquerer" translatable="false">El mal querer</string>

    <array name="albumes_images">
        <item>@drawable/ghostsi_iv</item>
        <item>@drawable/theosocialnetwork</item>
        <item>@drawable/theslip</item>
        <item>@drawable/nonations</item>
        <item>@drawable/governmentplates</item>
        <item>@drawable/thefall</item>
        <item>@drawable/wired</item>
        <item>@drawable/nolovedeepweb</item>
        <item>@drawable/thepowersthatb</item>
    </array>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="hombre">Home</string>
    <string name="termsandconditions_checkbox">He llegit i accepto els termes i condicions de l\'aplicacio</string>
    <string name="genero">Genere:</string>
    <string name="etSwitch">Mode nit / dia:</string>
    <string name="swBn">B/N</string>

    <string-array name="albums_titles">
        <item>@string/bad</item>
        <item>@string/darksideofthemoon</item>
        <item>@string/elmalquerer</item>
        <item>@string/encore</item>
    </string-array>
    <string-array name="filtre">
        <item>@string/filtre</item>
        <item>@string/orderaz</item>
        <item>@string/orderza</item>
    </string-array>
    <string-array name="idiomas">
        <item>@string/idiomas</item>
        <item>@string/cat</item>
        <item>@string/es</item>
        <item>@string/en</item>
    </string-array>
    <string name="mujer">Dona</string>
    <string name="menu_tools">Llicència</string>
    <string name="tvIdiomas" tools:ignore="DuplicateDefinition">Selecciona l\'idioma:</string>
    <string name="orderza" tools:ignore="DuplicateDefinition">Ordena de la Z a la A</string>
    <string name="orderaz" tools:ignore="DuplicateDefinition">Ordena de la A a la Z</string>
    <string name="odercategories" tools:ignore="DuplicateDefinition">Ordena per categories</string>
    <string name="mssgsaveduser" tools:ignore="DuplicateDefinition">Dades d\'usuari desades</string>
    <string name="idiomas" tools:ignore="DuplicateDefinition">Idiomes</string>
    <string name="filtre" tools:ignore="DuplicateDefinition">filtre...</string>
    <string name="es" tools:ignore="DuplicateDefinition">Espanyol</string>
    <string name="errortermes" tools:ignore="DuplicateDefinition">S\'han d\'acceptar els termes d\'ús per poder continuar</string>
    <string name="errorregistre" tools:ignore="DuplicateDefinition">Has d\'introduir l\'usuari i contrassenya</string>
    <string name="errorlogin" tools:ignore="DuplicateDefinition">Dades d\'accés incorrectes</string>
    <string name="en" tools:ignore="DuplicateDefinition">Anglés</string>
    <string name="cat" tools:ignore="DuplicateDefinition">Català</string>
    <string name="dscLogoApp">Logo de l\'aplicació</string>
    <string name="btnCat" translatable="false">.</string>
    <string name="dscMainNom">Nom d\'usuari</string>
    <string name="dscMainPassword">Contrassenya de l\'usuari</string>
    <string name="dscMainAccedir">Botó per fer login</string>
    <string name="dscMainRegistre">Botó per registrar l\'usuari</string>
    <string name="dscBtnCat">Botó per cambiar l\'idioma a català</string>
    <string name="dscBtnIng">Botò per cambiar l\'idioma a Anglés</string>
    <string name="dscBtnEs">Botó per a cambiar l\'idioma a Espanyol</string>
    <string name="loginCorrecte">S\'ha accedit correctament</string>
    <string name="etMail">Email</string>
    <string name="registreCorrecte">S\'ha registrat correctament</string>
    <string name="Email">Email</string>
    <string name="contrasenaIncorrecta">La contrassenya ha de ser mínim de 6 caracters</string>
    <string name="tvLlicència">Cliqueu aquí per a veure la llicència que utilitza aqusta app</string>
    <string name="tvText">La nostra app utilitza una llicència oberta sense obra derivada. A més, totes les imatges i cançons que utilitzem son agafades de internet i totes tenen llicència creative commons.</string>
    <string name="ttlPerfil">Perfil Usuari</string>
    <string name="ttlLlicència">Llicència</string>
    <string name="ttlInici">Inici</string>

</resources>
