<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cat.copernic.ferranjuan.projectem07ferraniadrian.ui.home.HomeFragment"
        android:label="@string/Inici"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cat.copernic.ferranjuan.projectem07ferraniadrian.ui.gallery.GalleryFragment"
        android:label="@string/Albums"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cat.copernic.ferranjuan.projectem07ferraniadrian.ui.slideshow.SlideshowFragment"
        android:label="@string/Categories"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="cat.copernic.ferranjuan.projectem07ferraniadrian.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="cat.copernic.ferranjuan.projectem07ferraniadrian.ui.send.PerfilFragment"
        android:label="@string/menu_perfilusuari"
        tools:layout="@layout/fragment_perfil" />

</navigation>