<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.P2_JuanChiner_Ferran.DetailActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/albumImageDetail"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleDetail"
        android:text="@string/title_placeholder"
        android:padding="8dp"
        android:layout_alignBottom="@id/albumImageDetail"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        style="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newsTitleDetail"
        android:text="@string/news_placeholder"
        android:padding="8dp"
        android:layout_below="@id/albumImageDetail"
        android:textColor="?android:textColorSecondary"
        style="@style/TextAppearance.AppCompat.Subhead" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subTitleDetail"
        android:text="@string/Albums"
        android:padding="16dp"
        android:layout_below="@id/newsTitleDetail"
        style="@style/TextAppearance.AppCompat.Subhead" />

    <SeekBar
        android:id="@+id/musicSeekBar"
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:layout_below="@id/subTitleDetail"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:layout_below="@id/newsTitleDetail"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/subTitleDetail"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_media_play"
        android:tint="@color/colorPrimaryDark" />
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:layout_below="@id/newsTitleDetail"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/subTitleDetail"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_media_pause"
        android:tint="@color/colorPrimaryDark"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonplaypause"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:layout_below="@id/newsTitleDetail"
        android:layout_marginLeft="-2dp"
        android:layout_toRightOf="@id/subTitleDetail"
        android:background="@android:color/transparent" />
</RelativeLayout>
</ScrollView>
